to work on any version of java